Fix multiselect align

--- a/src/containers/p2p/createOffer/style.css
+++ b/src/containers/p2p/createOffer/style.css
@@ -143,5 +143,5 @@
 
 :local .multiSelect {
   
-  
+  margin-left: 40px !important;
 }
